# Zephyr-dev

./: .env.example  .env.p45.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  PURE_CORE_BOUNDARY.md  README.md  conftest.py  docker-compose.p45-validation.yml  docker-compose.uns-api.yml  pyproject.toml  项目执行记录（Zephyr）.md
.github/workflows/: ci.yml
docs/: BENCH.md  CONFIG.md  CONTRACTS_INDEX.md  DOCS_POLICY.md  ENGINEERING_INVARIANTS.md  ITSTREAM_SCOPE.md  MAINTAINER_GUIDE.md  OBSERVABILITY_INVARIANTS.md  OPS_READY.md  P4_5_PLAN.md  P5-handoff.md  PHASE.md  PROJECT_CHARTER.md  REPO_MAP.md  SESSION_RESET_PROMPT.md  UNS_API.md  project-instructions.md  repo-map.md  testing-reality.md  商业模式.md
docs/archive/legacy-p0-p4/: PHASE.md  PROJECT_CHARTER.md  REPO_MAP.md
docs/p6/: CODEOWNERS_DRAFT  NOTICE_SBOM_PREFLIGHT_POLICY.md  P6_DERIVATION_POLICY.md  P6_M3_BASE_ACCEPTANCE_GATES.md  P6_M3_BASE_BRIDGE_CONTRACT.md  P6_M3_BASE_DESKTOP_TECH_DECISION.md  P6_M3_BASE_PRODUCT_BOUNDARY.md  P6_M3_BASE_PUBLIC_EXPORT_CONSUMPTION_PLAN.md  P6_M3_BASE_REPO_SCAFFOLD_PLAN.md  P6_M3_BASE_UI_DESIGN_BRIEF.md  P6_M3_S4_PUBLIC_CORE_ENTRYPOINT_AUDIT.md  P6_M3_S5_PUBLIC_CORE_BUNDLE_POLICY.md  P6_MILESTONE_MAP.md  P6_SCOPE_BOUNDARY.md  PUBLIC_PRIVATE_EXPORT_BOUNDARY.md  RELEASE_SOURCE_SHA_POLICY.md  SECURITY_REVIEW_REQUIRED.md  SIX_REPO_BOUNDARY.md  base_design_asset_request.json  base_local_bridge_contract.json  base_product_capability_manifest.json  base_public_export_consumption_plan.json  base_repo_scaffold_manifest.json  commercial_contamination_denylist.json  forbidden_import_map.json  p6_m3_s4_public_core_entrypoint_audit.json  p6_m3_s5_public_core_bundle_manifest.json  p6_task_index.json  private_core_export_manifest.json  public_core_export_manifest.json  security_sensitive_paths.json  six_repo_manifest.json
docs/p6k/: P6K_EXECUTION_PLAN.md  P6K_M0_BASELINE_AUDIT.md  P6K_M1_ENHANCED_PARTITION_PROFILE.md  P6K_M1_FIX_FAPIAO3.md  P6K_M1_S0_CI_CLEANUP.md  P6K_M2_PACKAGE_MANIFEST.md  P6K_NON_GOALS.md  P6K_OCR1_FIX2_LANGUAGE_FALLBACK.md  P6K_OCR1_FIX_RUNTIME_PRELOAD.md  P6K_OCR1_PADDLEOCR_DEFAULT.md  P6K_QA0_ENGINEERING_QUALITY.md  P6K_ROADMAP.md  P6K_SCOPE.md
docs/review-needed/: BENCH.md  CI_TOOLING.md  CONFIG.md  CONTRACTS_INDEX.md  DLQ.md  ENGINEERING_INVARIANTS.md  MAINTAINER_GUIDE.md  OBSERVABILITY_INVARIANTS.md  OPS_READY.md  RUNBOOK.md
tools/: _p6k_m0_common.py  gen_uns_stream_partition_stubs.py  p45_auth_compose_config.py  p45_http_fixture_server.py  p45_s3_bootstrap.py  p45_substrate_healthcheck.py  p45_webhook_echo_server.py  p5_1_final_release_pack.py  p5_1_m5_cli_env_ux_report.py  p5_1_m5_user_facing_boundary_report.py  p5_benchmark_report.py  p5_bounded_concurrency_report.py  p5_capability_domain_report.py  p5_connector_catalog.py  p5_connector_readiness.py  p5_destination_evidence_audit.py  p5_fuv_d_fix_report.py  p5_governance_audit_report.py  p5_m4_closeout_report.py  p5_m4_repair_plan.py  p5_m5_s1_report.py  p5_m5_s2_report.py  p5_m5_s3_report.py  p5_m5_s4_report.py  p5_m5_s5_report.py  p5_m5_s6_report.py  p5_m5_s7_report.py  p5_m5_s8_report.py  p5_m5_validation_report.py  p5_nm_representative_smoke.py  p5_product_cut_report.py  p5_recovery_operator_report.py  p5_runtime_boundary_report.py  p5_runtime_preflight.py  p5_s3_readiness_diagnose.py  p5_source_contract_report.py  p5_usage_report.py  p6_commercial_contamination_scan.py  p6_forbidden_import_scan.py  p6_m1_boundary_handoff.py  (+36 more)
typings/: README.md
typings/confluent_kafka/: __init__.pyi
validation/: P4_5_CLOSEOUT_AUDIT.md  P5_FUV_D_FIX_DELIVERY.md  P5_M1_RUNTIME_CONTRACT.md  P5_M2_RUNTIME_BOUNDARY.md  P5_M3_RECOVERY_OPERATOR_RUNBOOK.md  P5_M4_BENCHMARK_BASELINE.md  P5_M4_S10_PACKAGING_SKELETON.md  P5_M4_S11_USAGE_FACTS.md  P5_M4_S12_SOURCE_CONTRACTS.md  P5_M4_S12_USAGE_RUNTIME.md  P5_M4_S13_GOVERNANCE_AUDIT.md  P5_M4_S13_SOURCE_SPEC_PARITY.md  P5_M4_S14_CLOSEOUT.md  P5_M4_S8_BOUNDED_CONCURRENCY.md  P5_M4_S9_CAPABILITY_DOMAINS.md  P5_M4_S9_OUTPUT_BOUNDARY.md  P5_M5_S1_BASELINE_MATRIX.md  P5_M5_S2_DEEP_MATRIX.md  P5_M5_S3_STABILITY_MATRIX.md  P5_M5_S4_COLD_OPERATOR.md  P5_M5_S5_RELEASE_BUNDLE.md  P5_M5_S6_OPERATIONAL_ENVELOPE.md  P5_M5_S7_REAL_WORKFLOWS.md  P5_M5_S8_CLOSEOUT.md  P5_M5_VALIDATION_CHARTER.md  P5_USER_VALIDATION_PLAYBOOK.md  p45_closeout_exit_matrix.json  p45_truth_matrix.json  p5_benchmark_scenario_registry.json  p5_bounded_concurrency_matrix.json  p5_build_cut_manifest.json  p5_capability_domain_matrix.json  p5_dependency_boundary_manifest.json  p5_dependency_slice_manifest.json  p5_destination_surface_classification.json  p5_fuv_d_fix_delivery_payload_content_evidence.json  p5_fuv_d_fix_success_criteria.json  p5_governance_action_matrix.json  p5_governance_usage_linkage.json  p5_governance_vocabulary_matrix.json  (+79 more)
validation/local_only/p6_m1_m3_base_product/: README.md
validation/local_only/p6_m1_m3_base_product/tools/: p6_m3_base_boundary_gate.py  p6_m3_base_repo_scaffold_plan.py  p6_m3_base_scaffold.py  p6_m3_export_dry_run.py  p6_m3_prep_handoff.py  p6_m3_pro_scaffold.py  p6_m3_public_core_bundle_export.py  p6_m3_public_core_local_runner.py  p6_m3_s10_window_interaction_handoff.py  p6_m3_s11_runtime_packaging_handoff.py  p6_m3_s13_clean_machine_handoff.py  p6_m3_s2_base_repo_init_handoff.py  p6_m3_s3_base_bridge_handoff.py  p6_m3_s4_base_real_adapter_handoff.py  p6_m3_s5_base_bundle_handoff.py  p6_m3_s5r_bundle_surface_handoff.py  p6_m3_s8_ui_invoke_handoff.py
