[project]
name = "zephyr"
version = "0.1.0"
description = "Zephyr Intelligent Data Extraction Pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
lint = [
  "ruff>=0.15.0,<1.0.0",
  "mypy>=1.19.1,<2.0.0",
  "types-requests>=2.32.4,<3.0.0",
  "pyright>=1.1.0",
]
test = [
  { include-group = "lint" },
  "pytest>=9.0.0,<10.0.0",
  "pytest-cov>=7.0.0,<8.0.0",
  "pytest-xdist>=3.8.0,<4.0.0",
]
dev = [
  "pre-commit>=4.0.0,<5.0.0",
]

[tool.uv.workspace]
members = ["packages/*"]

# 参考 unstructured / unstructured-api：pyright 严格模式写在 pyproject <!--citation:1-->
[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.12"
typeCheckingMode = "strict"
stubPath = "./typings"
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreComment = true


extraPaths = [
    "packages/zephyr-core/src",
    "packages/zephyr-api/src",
    "packages/zephyr-ingest/src",
    "packages/uns-stream/src",
]

[tool.ruff]
# 针对 monorepo：明确扫描范围（避免把无关目录也扫进来）
#include = ["packages/*/src"]
line-length = 100
src = ["packages/uns-stream/src", "packages/zephyr-core/src", "packages/zephyr-ingest/src", "packages/zephyr-api/src"]
exclude = ["**/.venv", "**/dist", "**/build", "**/.mypy_cache", "**/.ruff_cache"]
#exclude = [
#    "prepline_*/api",
#]


[tool.ruff.lint]
select = [
    "C4",       # -- flake8-comprehensions --
    "COM",      # -- flake8-commas --
    "E",        # -- pycodestyle errors --
    "W",        # -- pycodestyle warnings --
    "F",        # -- pyflakes --
    "I",        # -- isort (imports) --
    "PLR0402",  # -- Name compared with itself like `foo == foo` --
    "PT",       # -- flake8-pytest-style --
    "SIM",      # -- flake8-simplify --
    "UP015",    # -- redundant `open()` mode parameter (like "r" is default) --
    "UP018",    # -- Unnecessary {literal_type} call like `str("abc")`. (rewrite as a literal) --
    "UP032",    # -- Use f-string instead of `.format()` call --
    "UP034",    # -- Avoid extraneous parentheses --
]
ignore = [
    "COM812",   # -- over aggressively insists on trailing commas where not desireable --
    "PT006",    # -- pytest.mark.parametrize string vs tuple style for arg names --
    "PT011",    # -- pytest.raises({exc}) too broad, use match param or more specific exception --
    "PT012",    # -- pytest.raises() block should contain a single simple statement --
    "PT014",    # -- duplicate parametrize test case --
    "PT015",    # -- assertion always fails, use pytest.fail() --
    "SIM115",   # -- use context manager for opening files (too noisy for test multipart patterns) --
    "SIM117",   # -- merge `with` statements for context managers that have same scope --
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
mypy_path = "typings"
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
no_implicit_optional = true
# 先别把历史/搬运代码逼死：初期允许缺失导入，后续再收紧
ignore_missing_imports = true
