[project]
name = "zephyr"
version = "0.1.0"
description = "Zephyr Intelligent Data Extraction Pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.97",
    "clickhouse-connect>=0.15.1",
    "psycopg>=3.3.3",
    "pymongo>=4.17.0",
]

[dependency-groups]
lint = [
  "ruff>=0.15.0,<1.0.0",
  "mypy>=1.19.1,<2.0.0",
  "types-requests>=2.32.4,<3.0.0",
  "pyright>=1.1.0",
]
test = [
  { include-group = "lint" },
  "pytest>=9.0.0,<10.0.0",
  "pytest-cov>=7.0.0,<8.0.0",
  "pytest-xdist>=3.8.0,<4.0.0",
]
dev = [
  "pre-commit>=4.0.0,<5.0.0",
  "uns-stream[all-docs]", # 联动：让根环境包含 uns-stream 的所有 AI 库
  "zephyr-core",          # 联动：让根环境包含核心库
  "zephyr-ingest",
  "zephyr-api",
  "pyright>=1.1.408",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
# 告诉 uv，这些包就在本地 packages 文件夹里
it-stream = { workspace = true }
uns-stream = { workspace = true }
zephyr-core = { workspace = true }
zephyr-api = { workspace = true }
zephyr-ingest = { workspace = true }

# 参考 unstructured / unstructured-api：pyright 严格模式写在 pyproject <!--citation:1-->
[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.12"
typeCheckingMode = "strict"
stubPath = "./typings"
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreComment = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
exclude = [
    ".tmp",
    "**/.tmp",
    "packages/uns-stream/src/uns_stream/tests/fixtures",
    "**/node_modules",
    "**/__pycache__",
    "**/.venv",
    "**/typings",
    "**/tools",
    ".uv-cache"
]

extraPaths = [
    "packages/zephyr-core/src",
    "packages/zephyr-api/src",
    "packages/it-stream/src",
    "packages/zephyr-ingest/src",
    "packages/uns-stream/src",
]

[tool.ruff]
# 针对 monorepo：明确扫描范围（避免把无关目录也扫进来）
#include = ["packages/*/src"]
line-length = 100
src = ["packages/uns-stream/src/uns_stream/tests/fixtures", "packages/uns-stream/src", "packages/it-stream/src", "packages/zephyr-core/src", "packages/zephyr-ingest/src", "packages/zephyr-api/src"]
exclude = [".tmp", "**/.venv", "**/dist", "**/build", "**/.mypy_cache", "**/.ruff_cache", "**/typings", "**/tools", "**/.tmp","**/.artifact_smoke","**/.pytest_tmp_artifacts","**/.pytest_tmp_artifacts2"]
#exclude = [
#    "prepline_*/api",
#]


[tool.ruff.lint]
select = [
    "C4",       # -- flake8-comprehensions --
    "COM",      # -- flake8-commas --
    "E",        # -- pycodestyle errors --
    "W",        # -- pycodestyle warnings --
    "F",        # -- pyflakes --
    "I",        # -- isort (imports) --
    "PLR0402",  # -- Name compared with itself like `foo == foo` --
    "PT",       # -- flake8-pytest-style --
    "SIM",      # -- flake8-simplify --
    "UP015",    # -- redundant `open()` mode parameter (like "r" is default) --
    "UP018",    # -- Unnecessary {literal_type} call like `str("abc")`. (rewrite as a literal) --
    "UP032",    # -- Use f-string instead of `.format()` call --
    "UP034",    # -- Avoid extraneous parentheses --
]
ignore = [
    "COM812",   # -- over aggressively insists on trailing commas where not desireable --
    "PT006",    # -- pytest.mark.parametrize string vs tuple style for arg names --
    "PT011",    # -- pytest.raises({exc}) too broad, use match param or more specific exception --
    "PT012",    # -- pytest.raises() block should contain a single simple statement --
    "PT014",    # -- duplicate parametrize test case --
    "PT015",    # -- assertion always fails, use pytest.fail() --
    "SIM115",   # -- use context manager for opening files (too noisy for test multipart patterns) --
    "SIM117",   # -- merge `with` statements for context managers that have same scope --
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = ["-q", "-n", "auto", "--basetemp=.tmp/pytest"]
markers = [
  "integration: requires optional extras and fixture files",
  "auth_contract: P4.5 authenticity contract tier",
  "auth_orchestration: P4.5 authenticity orchestration tier",
  "auth_local_real: P4.5 authenticity local-real tier",
  "auth_service_live: P4.5 authenticity service-live tier",
  "auth_saas_live: P4.5 authenticity saas-live tier",
  "auth_recovery_drill: P4.5 authenticity recovery-drill tier",
]


[tool.mypy]
python_version = "3.12"
mypy_path = "typings"
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
no_implicit_optional = true
# 先别把历史/搬运代码逼死：初期允许缺失导入，后续再收紧
ignore_missing_imports = true
